--- a/GCSimulator/GCSimulator.vcxproj
+++ b/GCSimulator/GCSimulator.vcxproj
@@ -141,10 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="GCSimulator.cpp" />
+    <ClCompile Include="Page.cpp" />
+    <ClCompile Include="Storage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="Page.h" />
+    <ClInclude Include="Storage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
