--- a/GCSimulator/GCSimulator.vcxproj
+++ b/GCSimulator/GCSimulator.vcxproj
@@ -142,12 +142,17 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="GCSimulator.cpp" />
     <ClCompile Include="Page.cpp" />
+    <ClCompile Include="Random.cpp" />
+    <ClCompile Include="Reader.cpp" />
     <ClCompile Include="Storage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="Global.h" />
     <ClInclude Include="Page.h" />
+    <ClInclude Include="Random.h" />
+    <ClInclude Include="Reader.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Storage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
