--- a/GCSimulator/GCSimulator.vcxproj.filters
+++ b/GCSimulator/GCSimulator.vcxproj.filters
@@ -54,11 +54,11 @@
     <ClCompile Include="Write.cpp">
       <Filter>소스 파일\util</Filter>
     </ClCompile>
-    <ClCompile Include="BlockStatus.cpp">
-      <Filter>소스 파일\flash</Filter>
-    </ClCompile>
     <ClCompile Include="Greedy.cpp">
       <Filter>소스 파일\gc</Filter>
+    </ClCompile>
+    <ClCompile Include="PageStatus.cpp">
+      <Filter>소스 파일\flash</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -83,11 +83,11 @@
     <ClInclude Include="Write.h">
       <Filter>헤더 파일\util</Filter>
     </ClInclude>
-    <ClInclude Include="BlockStatus.h">
-      <Filter>헤더 파일\flash</Filter>
-    </ClInclude>
     <ClInclude Include="Greedy.h">
       <Filter>헤더 파일\gc</Filter>
+    </ClInclude>
+    <ClInclude Include="PageStatus.h">
+      <Filter>헤더 파일\flash</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
