--- a/GCSimulator/GCSimulator.vcxproj.filters
+++ b/GCSimulator/GCSimulator.vcxproj.filters
@@ -65,9 +65,6 @@
     <ClInclude Include="Block.h">
       <Filter>헤더 파일\flash</Filter>
     </ClInclude>
-    <ClInclude Include="Global.h">
-      <Filter>헤더 파일\flash</Filter>
-    </ClInclude>
     <ClInclude Include="Storage.h">
       <Filter>헤더 파일\flash</Filter>
     </ClInclude>
@@ -88,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="PageStatus.h">
       <Filter>헤더 파일\flash</Filter>
+    </ClInclude>
+    <ClInclude Include="Global.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
