--- a/GCSimulator/GCSimulator.vcxproj.filters
+++ b/GCSimulator/GCSimulator.vcxproj.filters
@@ -71,31 +71,31 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Block.h">
+    <ClInclude Include="Block.hpp">
       <Filter>헤더 파일\flash</Filter>
     </ClInclude>
-    <ClInclude Include="Storage.h">
+    <ClInclude Include="Storage.hpp">
       <Filter>헤더 파일\flash</Filter>
     </ClInclude>
-    <ClInclude Include="Page.h">
+    <ClInclude Include="Page.hpp">
       <Filter>헤더 파일\flash</Filter>
     </ClInclude>
-    <ClInclude Include="Reader.h">
+    <ClInclude Include="Reader.hpp">
       <Filter>헤더 파일\util</Filter>
     </ClInclude>
-    <ClInclude Include="Random.h">
+    <ClInclude Include="Random.hpp">
       <Filter>헤더 파일\util</Filter>
     </ClInclude>
-    <ClInclude Include="Write.h">
+    <ClInclude Include="Write.hpp">
       <Filter>헤더 파일\util</Filter>
     </ClInclude>
-    <ClInclude Include="Greedy.h">
+    <ClInclude Include="Greedy.hpp">
       <Filter>헤더 파일\gc</Filter>
     </ClInclude>
-    <ClInclude Include="PageStatus.h">
+    <ClInclude Include="PageStatus.hpp">
       <Filter>헤더 파일\flash</Filter>
     </ClInclude>
-    <ClInclude Include="Global.h">
+    <ClInclude Include="Global.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Config.h">
